--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
     "nuxt": "^3.1.2"
+  },
+  "dependencies": {
+    "nuxt-directus": "^3.2.2"
   }
 }
