--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.3.3",
+    "nuxt-seo-kit": "^1.3.6",
+    "nuxt-simple-sitemap": "^2.4.3",
+    "sitemap": "^7.1.1"
   },
   "dependencies": {
     "npm": "^9.5.1",
