--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [[headers]]
   for = "/"
   [headers.values]
-    cache-control = "no-cache"
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
