--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
 [[headers]]
   for = "/"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate"
-    Pragma = "no-cache"
-    Expires = "0"
+    Cache-Control = "max-age=0, must-revalidate, public"
