--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sitemap": "^7.1.1"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "npm": "^9.5.1",
     "nuxt-directus": "^3.2.2"
   }
