--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
-    "nuxt": "^3.3.3",
-    "nuxt-seo-kit": "^1.3.8",
-    "nuxt-simple-sitemap": "^2.4.3",
-    "sitemap": "^7.1.1"
+    "nuxt": "^3.10.3"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "npm": "^9.5.1",
-    "nuxt-directus": "^3.2.2"
+    "nuxt-directus": "^5.6.0",
+    "unhead": "^1.8.11"
   }
 }
