--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
+    "@nuxtjs/seo": "^2.0.0-rc.8",
     "nuxt": "^3.10.3"
   },
   "dependencies": {
